@@ -22,6 +22,11 @@
 /* the write to lcd_daemon fifo */
 static int lcd_fd = -1;
 
+/* the lcd type info */
+static unsigned char lcd_type = 0;
+static unsigned char lcd_max_line = 0;
+static unsigned char lcd_max_col = 0;
+
 extern char *__progname;
 
 /* common functions */
@@ -31,11 +36,14 @@ static void
 __attribute__((noreturn)) usage(void)
 {
 	putchar('\n');
-	fprintf(stdout, "Usage: ./%s -[h]                    \n", __progname);
-	fprintf(stdout, "       -h            -> show this help          \n");
+	fprintf(stdout, "Usage: ./%s -[h]                                  \n",
+		__progname);
+	fprintf(stdout, "       -t 2          -> LCD1602(:1)/LCD2004(:2)   \n");
+	fprintf(stdout, "       -h            -> show this help            \n");
 	putchar('\n');
-	fprintf(stdout, "Example:                                        \n");
-	fprintf(stdout, "        ./%s                        \n", __progname);
+	fprintf(stdout, "Example: LCD size 20x4                            \n");
+	fprintf(stdout, "        ./%s -t 2                                 \n",
+		__progname);
 
 	exit(EXIT_FAILURE);
 }
@@ -48,13 +56,44 @@ static void cleanup(void)
 	fprintf(stdout, "application is down -> bye");
 }
 
+static int init_lcd(int type)
+{
+	lcd_fd = open(LCD_FIFO, O_WRONLY);
+	if (lcd_fd < 0) {
+		perror("open in main()");
+		return -1;;
+	}
+
+	switch(type) {
+	case 1:
+		lcd_type = LCD1602;
+		lcd_max_line = LCD1602_MAX_LINE;
+		lcd_max_col = LCD1602_MAX_COL;
+		break;
+	case 2:
+		lcd_type = LCD2004;
+		lcd_max_line = LCD2004_MAX_LINE;
+		lcd_max_col = LCD2004_MAX_COL;
+		break;
+	default:
+		eprintf("LCD is not supported!\n");
+		return -1;
+	}
+
+	return 0;
+}
 
 
 int main(int argc, char *argv[])
 {
+	int type = -1;
+
 	int c;
-	while ((c = getopt(argc, argv, "h")) != -1) {
+	while ((c = getopt(argc, argv, "ht:")) != -1) {
 		switch (c) {
+		case 't':
+			type = atoi(optarg);
+			break;
 		case 'h':
 			usage();
 			break;
@@ -64,35 +103,30 @@ int main(int argc, char *argv[])
 		}
 	}
 
-
-	/*
-	 * check kdo arguments
-	 * ...
-	 */
+	if (type == -1)
+		usage();
 
 	int err = atexit(cleanup);
 	if (err != 0)
 		exit(EXIT_FAILURE);
 
-	/*
-	 * do the "rest"
-	 */
-
-	puts("applications is up and running");
-
-
-	lcd_fd = open(LCD_FIFO, O_WRONLY);
-	if (lcd_fd < 0) {
-		perror("open in main()");
+	err = init_lcd(type);
+	if (err < 0) {
+		eprintf("can't init LCD\n");
 		exit(EXIT_FAILURE);
 	}
 
+	puts("applications is up and running");
+
+	/*
+	 * for testing
+	 */
 	struct lcd_request req;
 	size_t len = sizeof(struct lcd_request);
 	memset(&req, 0, len);
 
 	req.line = 2;
-	req.cur_pos = 10;
+	req.cur_pos = 5;
 	strncpy(req.str, "this is a test", len);
 
 	printf("sizeof struct lcd_request %d\n", (int) len);
@@ -105,7 +139,7 @@ int main(int argc, char *argv[])
 		printf("error ... %d\n", err);
 
 	/* dummy waiting */
-	usleep(10000000);
+	usleep(1000000);
 
 	return EXIT_SUCCESS;
 }
